updated individual topics pages

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,15 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Title:</b>
-  <%= @topic.title %>
+  <h3><%= @topic.title %></h3>
 </p>
 
 <p>
-  <b>Description:</b>
   <%= @topic.description %>
 </p>
 
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
