--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Listing topics</h1>
+<h1>Suggestotron 3000!</h1>
+
+<button value="Submit a link"><%= link_to 'Submit a Link', new_topic_path %></button>
 
 <table>
   <tr>
     <th>Title</th>
-    <th></th>
+    <th>Votes</th>
     <th></th>
     <th></th>
   </tr>
@@ -19,5 +21,3 @@
 </table>
 
 <br />
-
-<%= link_to 'New Topic', new_topic_path %>
