--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Suggestotron</title>
+  <title>Suggestotron 3000</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="container">
 <% flash.each do |name, msg| %>
 	<div><%= msg %></div>
 <% end %>
 
 <%= yield %>
 
+</div><!-- End of 'container' div -->
 </body>
 </html>
