--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -82,3 +82,16 @@ div {
     list-style: square;
   }
 }
+
+table {
+	margin-top: 20px;
+}
+
+td, {
+	border: 1px dotted #D8D8D8;
+	padding: 15px;
+}
+
+th {
+	padding: 15px;
+}
