--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,10 +4,8 @@
 
 <table>
   <tr>
-    <th>Title</th>
+    <th>Item</th>
     <th>Votes</th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @topics.each do |topic| %>
