messed with CSS

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -13,6 +13,9 @@ body {
 	border-top-left-radius: 350px;
 	border-bottom-right-radius: 350px;
 	padding: 100px;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 2%;
 }
 
 h1 {
